<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#82BC85"
    android:orientation="vertical"
    tools:context=".login">

    <TextView
        android:id="@+id/loginpg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="16dp"
        android:text="@string/loginpg"
        android:textAlignment="center"
        android:textColor="#08490B"
        android:textSize="70dp" />

    <TextView
        android:id="@+id/usernamelogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:text="@string/enterUserName"
        android:textColor="#1B1819"
        android:textSize="38sp" />

    <EditText
        android:id="@+id/enterUserNameLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="abc@gmail.com"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/passwordLoginPg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="16dp"
        android:text="@string/enterPassword"
        android:textColor="#222020"
        android:textSize="38sp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="***************"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <Button
        android:id="@+id/loginBtnLoginPg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="#3E61DF"
        android:text="@string/loginsubmit"
        android:textSize="34sp" />

</LinearLayout>