<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update_User_Profile">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="415dp"
        android:layout_height="736dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/images__1_" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="383dp"
        android:layout_height="605dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="21dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:srcCompat="@drawable/recktangle" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="@dimen/layout_width"
        android:layout_height="63dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="654dp"
        android:text="@string/UpdateYourDetails"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="116dp"
        android:layout_height="111dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="479dp"

        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintEnd_toEndOf="@+id/imageView16"
        app:srcCompat="@drawable/user" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="349dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="350dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/farmerDetailsName"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="@+id/imageView16" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="349dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="275dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/farmerDetailsEmail"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="@+id/imageView16" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="349dp"
        android:layout_height="55dp"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="197dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/farmerDetailsTell"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="@+id/imageView16" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="349dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="116dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/farmerDetailsLocation"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="@+id/imageView16" />

    <Button
        android:id="@+id/Button7"
        android:layout_width="182dp"
        android:layout_height="71dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#1C7020"
        android:text="@string/updateDetails"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="@+id/imageView16" />

</androidx.constraintlayout.widget.ConstraintLayout>