<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Enter_Farmer_Details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CE58C55D"
        android:orientation="vertical"
        tools:context=".Register"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/farmerDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:background="#5FBF63"
            android:text="@string/enterFarmerDetails"
            android:textAlignment="center"
            android:textColor="#0B0A0A"
            android:textSize="50dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cultivatedLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="16dp"
            android:text="@string/CultivatedArea"
            android:textColor="#0B0A0A"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/enterCultivatedLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="Enter Cultivated area"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/cultivatedCrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="16dp"
            android:text="@string/CultivatedCrop"
            android:textColor="#0B0A0A"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/enterCultivatedCrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="Enter Cultivated Crop"

            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/cultivationArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="16dp"
            android:text="@string/CultivationArea"
            android:textColor="#0B0A0A"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/enterCultivationArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="Enter Cultivation area"

            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="230dp"
                android:layout_height="131dp"
                android:layout_marginStart="98dp"
                android:layout_marginTop="87dp"
                android:layout_marginEnd="99dp"
                android:layout_marginBottom="123dp"
                android:background="#78CF7C"
                android:contentDescription="@string/submitDetails"
                android:scaleType="fitCenter"
                android:src="@drawable/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>